# external

./: README.md
Alembic/1.8.8/: CMakeLists.txt  package.py
Boost/1.85.0/: CMakeLists.txt  package.py
Boost/1.88/: CMakeLists.txt  package.py
Boost/1.88.0/: CMakeLists.txt  package.py
FBX/2020.3.2/: package.py
HDF5/1.14.6/: CMakeLists.txt  package.py
Imath/3.1.12/: CMakeLists.txt  package.py
MaterialX/1.39.3/: CMakeLists.txt  package.py
OpenColorIO/2.4.2/: CMakeLists.txt  package.py
OpenEXR/3.3.4/: CMakeLists.txt  package.py
OpenEXR/3.4.4/: CMakeLists.txt
OpenImageIO/2.4.17.0/: CMakeLists.txt  package.py
OpenSubdiv/3.6.1/: CMakeLists.txt  package.py
OpenUSD/25.02/: package.py
OpenUSD/25.05/: CMakeLists.txt  package.py
OpenVDB/12.0.1/: CMakeLists.txt  package.py
OpenVDB/13.0.0/: CMakeLists.txt
Ptex/2.4.3/: CMakeLists.txt  package.py
Pybind11/3.0.0/: CMakeLists.txt  package.py
Python/3.11.11/: package.py
Python/3.13.5/: CMakeLists.txt  package.py
Qt/6.5.3/: CMakeLists.txt  package.py
cmake/4.0.3/: package.py
gcc/11.2.0/: package.py
gcc/14.2/: CMakeLists.txt  package.py
glibc/2.28/: CMakeLists.txt  package.py
oneAPI/2025.2.0.592/: package.py
oneTBB/2021.13.0/: package.py
oneTBB/2022.2.0/: CMakeLists.txt  package.py
vfxplatform/2025/: package.py
vfxplatform/2026/: CMakeLists.txt  package.py
